# export_potential

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tabela_epi_barras.xlsx  ~$tabela_epi_barras.xlsx
app/: app.py  apresent.py  data_loader.py  style.css
app/data/: app_dataset.parquet  app_dataset_processed.parquet  df_competitors.parquet  df_tariff_brazil.parquet  epi_scores.parquet  epi_scores_countries.parquet  epi_scores_processed.parquet  epi_scores_sc_comp.parquet  epi_scores_sh6.parquet
data/interim/: bilateral_exports_sh6.parquet  comex_exps_weighted.parquet  tariffs.parquet
data/processed/: demand_potential.parquet  ease_of_trade.parquet  epi_scores.parquet  epi_scores_doors.xlsx  supply_potential_sc.parquet
docs/: mkdocs.yml
docs/docs/: index.md
export_potential/: __init__.py  epi_doors.xlsx  make_comex_exps.py  make_comex_imps.py  make_competitors.py  make_demand.py  make_ease.py  make_supply.py  make_tariff.py
export_potential/modeling/: analysis_epi.py  model_epi.py
references/: countries_br.csv  gdp_growth.xlsx  munic_vp.xlsx  pop_growth.xlsx  products.csv  products_br_mdic.xlsx  sh6_mundo_comp.xlsx  share_sc.xlsx
