[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "export_potential"
version = "0.0.1"
description = "Mapeamento do potencial de exporta\u00e7\u00f5es dos produtos catarinenses."
authors = [
  { name = "Matheus Rosa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.9"


[tool.ruff]
line-length = 99
src = ["export_potential"]
include = ["pyproject.toml", "export_potential/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["export_potential"]
force-sort-within-sections = true

